# crystal-ball-cup

./: .gitignore  AGENTS.md  Cargo.toml  README.md  crystal-ball-cup.opam  dune-project  response.md  rustfmt.toml
.github/workflows/: ci.yml  deploy-pages.yml  dune-build-check.yml
bonsai/: app.mli  dune  main.ml
collections/2025/: crystal_2025.ml  dune
collections/test/: dune  test_2025.ml
docs/: dune  events.json  index.html  index.md  main.js  plot.js  responses.csv  scores.json  standings.js  style.css
docs/2025/: .gitignore  analysis.html  dune  dygraph_example.ml  events.json  explorer.js  index.html  index.md  main.js  main.ml  responses_and_scores.json  results.json  scores.json
docs/testbonsai/: .gitignore  dune  index.md
etc/: .gitignore  dune
etc/2025/: crystal.db  dune  responses.csv  rules.md
lib/: Cargo.toml
lib/src/: lib.rs
ppx_deriving_js/: dune  ppx_deriving_js.ml
ppx_deriving_js/src/: dune  ppx_deriving_js.ml  ppx_deriving_js.mli
ppx_deriving_js/test/: dune  input.expected  input.ml
script/: pyproject.toml  visualize.py
src/: collection.ml  collection.mli  collection_intf.ml  confidence_optimizer.ml  confidence_optimizer.mli  db.ml  db.mli  dune  event.ml  event.mli  event_id.ml  event_id.mli  explanation.ml  explanation.mli  import.ml  outcome.ml  outcome.mli  outcome_kind.ml  outcome_kind.mli  probability.ml  probability.mli  question_map.ml  question_map.mli  resolution.ml  resolution.mli  response.ml  response.mli  responses.ml  responses.mli  responses_and_scores.ml  responses_and_scores.mli  scores.ml  scores.mli  user_result.ml  user_result.mli
src/2025/: dune  events.mli
src/bonsai/: app.ml  app.mli  colors.ml  confidence.ml  confidence.mli  confidence2.ml  dune  explorer.ml  explorer.mli  forms.ml  main.ml  multi_select.ml  plots.ml  plots.mli  querybox.ml  standings.ml  standings.mli  standings2.ml  standings2.mli  table.ml  table.mli  text_form.ml  textbox.ml  which_events.ml  which_events.mli  which_respondents.ml  which_respondents.mli
src/collections/: dune  m2025.ml  m2025.mli
src/plotly/: config.ml  config.mli  data.ml  data.mli  dune  float_or_string.ml  float_or_string.mli  foo.ml  foo.mli  layout.ml  layout.mli  plotly.ml  plotly.mli
src/sqlite/: db.ml  db.mli  dune
src/sqljs/: db.ml  db.mli  dune  sqljs.ml  sqljs.mli
test/: dune  test_2025.ml  test_collection.ml  test_confidence_optimizer.ml  test_db.ml  test_outcome.ml  test_probability.ml  test_resolution.ml  test_responses.ml
web/2025/: dune  main.ml
