opam-version: "2.0"
name: "crystal-ball-cup"
version: "1.0.0"
synopsis: "Crystal Ball Cup"
maintainer: "Ming Li <mingyli34@gmail.com>"
authors: "Ming Li <mingyli34@gmail.com>"
license: "MIT"
homepage: "https://github.com/ming-li/crystal-ball-cup"
bug-reports: "https://github.com/ming-li/crystal-ball-cup/issues"
depends: [
  "ocaml" {>= "5.1.1"}
  "dune" {>= "3.12"}
  "core"
  "yojson"
  "ppx_jane"
  "ppx_yojson_conv"
  "ppx_inline_test"
  "ppx_expect"
  "csv"
  "textutils-ascii-table"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
