opam-version: "2.0"
name: "crystal-ball-cup"
version: "1.0.0"
synopsis: "Crystal Ball Cup"
maintainer: "Ming Li <mingyli34@gmail.com>"
authors: "Ming Li <mingyli34@gmail.com>"
homepage: "https://github.com/mingyli/crystal-ball-cup"
bug-reports: "https://github.com/mingyli/crystal-ball-cup/issues"
depends: [
  "ocaml" {= "4.10.2"}
  "dune" {= "3.19.1"}
  "core" {= "v0.14.1"}
  "yojson" {= "3.0.0"}
  "ppx_jane" {= "v0.14.0"}
  "ppx_yojson_conv" {= "v0.14.0"}
  "ppx_inline_test" {= "v0.14.1"}
  "ppx_expect" {= "v0.14.2"}
  "csv" {= "2.4"}
  "textutils" {= "v0.14.0"}
  "ocamlformat"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
