opam-version: "2.0"
name: "crystal-ball-cup"
version: "1.0.0"
synopsis: "Crystal Ball Cup"
maintainer: "Ming Li <mingyli34@gmail.com>"
authors: "Ming Li <mingyli34@gmail.com>"
homepage: "https://github.com/mingyli/crystal-ball-cup"
bug-reports: "https://github.com/mingyli/crystal-ball-cup/issues"
depends: [
  "ocaml" {= "5.1.1"}
  "dune"
  "core"
  "yojson"
  "ppx_jane"
  "ppx_yojson_conv"
  "ppx_inline_test"
  "ppx_expect"
  "csv"
  "textutils"
  "ocamlformat"
  "caqti"
  "caqti-driver-sqlite3"
  "bonsai" {>= "v0.17.0"}
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "js_of_ocaml-compiler"
  "metaquot"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
