(env
 (_ 
  (env-vars
   (SOURCE_DATE_EPOCH 0))))

(rule
 (target events.json)
 (deps ../bin/main.exe)
 (mode promote)
 (action
  (with-stdout-to
   events.json
   (run ../bin/main.exe json))))

(rule
 (target index.html)
 (deps index.md)
 (mode promote)
 (action
  (run pandoc -s -t html5 index.md -o index.html)))

(rule
 (target scores.json)
 (deps ../bin/main.exe responses.csv)
 (mode promote)
 (action
  (with-stdout-to
   scores.json
   (run ../bin/main.exe scores -responses responses.csv))))