(rule
 (target events.md)
 (deps ../bin/main.exe)
 (action
  (with-stdout-to
   events.md
   (run ../bin/main.exe 2025 markdown))))

(rule
 (targets slides.md)
 (deps rules.md events.md)
 (action
  (with-stdout-to
   slides.md
   (run cat rules.md events.md))))

(rule
 (targets slides.pdf)
 (deps slides.md score.png form.png)
 (mode promote)
 (action
  (run pandoc -t beamer slides.md -o slides.pdf --pdf-engine=xelatex)))
