(rule
 (target crystal.db)
 (deps %{project_root}/bin/main.exe %{project_root}/etc/2025/responses.csv)
 (mode promote)
 (action
  (run
   %{project_root}/bin/main.exe
   2025
   create-db
   -responses
   %{project_root}/etc/2025/responses.csv
   -output
   %{target})))

(rule
 (target main.bc.js)
 (mode promote)
 (deps %{project_root}/web/2025/main.bc.js)
 (action
  (copy %{deps} %{target})))

(rule
 (target index.html)
 (deps index.md ../style.css)
 (mode promote)
 (action
  (run pandoc -s -t html5 --css ../style.css index.md -o %{target})))
