(rule
 (target events.md)
 (deps %{project_root}/bin/main.exe)
 (action
  (with-stdout-to
   events.md
   (run %{project_root}/bin/main.exe 2025 markdown))))

(rule
 (targets slides.md)
 (deps rules.md events.md)
 (action
  (with-stdout-to
   slides.md
   (run cat rules.md events.md))))

(rule
 (targets slides.pdf)
 (deps slides.md score.png form.png)
 (mode promote)
 (action
  (run pandoc -t beamer slides.md -o slides.pdf --pdf-engine=xelatex)))

(rule
 (target crystal.db)
 (deps %{project_root}/bin/main.exe responses.csv)
 (mode promote)
 (action
  (run
   %{project_root}/bin/main.exe
   2025
   create-db
   -output
   %{target}
   -responses
   responses.csv)))
