(rule
 (target events.md)
 (deps %{project_root}/bin/main.exe)
 (action
  (with-stdout-to
   events.md
   (run %{project_root}/bin/main.exe 2025 markdown))))

(rule
 (targets slides.md)
 (deps rules.md events.md)
 (action
  (with-stdout-to
   slides.md
   (run bash -c "(cat rules.md; echo; cat events.md)"))))

(rule
 (targets slides.pdf)
 (deps slides.md form.png header.tex)
 (mode promote)
 (action
  (run
   pandoc
   -t
   beamer
   slides.md
   -o
   slides.pdf
   --pdf-engine=xelatex
   --include-in-header=header.tex)))

(rule
 (target responses_and_scores.sexp)
 (deps %{project_root}/bin/main.exe responses.csv)
 (action
  (with-stdout-to
   responses_and_scores.sexp
   (run
    %{project_root}/bin/main.exe
    2025
    responses-and-scores
    -responses
    responses.csv))))
